Errors
<kernel>:1445:1: warning: control reaches end of non-void function
}
^
<kernel>:1490:1: warning: control may reach end of non-void function
}
^
<kernel>:1528:1: warning: control may reach end of non-void function
}
^
<kernel>:2154:66: error: extraneous ')' before ';'
                shade_rec->normal = transform_normal(shade_rec->normal, matrix));
                                                                               ^

